--- a/.gitmodules
+++ b/.gitmodules
@@ -5,9 +5,4 @@
 [submodule "third_party/SDL"]
 	path = third_party/SDL
 	url = https://github.com/libsdl-org/SDL.git
-	branch = SDL2
-
-[submodule "third_party/SDL_image"]
-	path = third_party/SDL_image
-	url = https://github.com/libsdl-org/SDL_image.git
-	branch = SDL2
+	branch = main
