静态链接支持

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,18 @@ project(lovejs LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+# 强制静态链接
+set(BUILD_SHARED_LIBS OFF)
+
+# 静态链接 C++ 标准库和运行时
+if(MSVC)
+    # MSVC: 静态链接运行时库
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+elseif(NOT APPLE)
+    # GCC/Clang/MinGW (非 macOS): 静态链接 libgcc 和 libstdc++
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
+endif()
 
 # 输出目录
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
@@ -34,7 +45,7 @@ add_executable(lovejs ${LOVEJS_SOURCES})
 target_include_directories(lovejs PRIVATE
     ${CMAKE_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/src
-    ${CMAKE_BINARY_DIR}/sdl3_compat_include  # SDL3/SDL.h 格式
+    ${CMAKE_BINARY_DIR}/sdl3_compat_include
 )
 
 # 链接第三方库
@@ -43,16 +54,28 @@ target_link_libraries(lovejs PRIVATE
     SDL3::SDL3-static
 )
 
-# Windows 特定设置
-if(WIN32)
-    target_compile_definitions(lovejs PRIVATE _CRT_SECURE_NO_WARNINGS)
-    # Windows 下隐藏控制台窗口（Release 模式）
-    if(CMAKE_BUILD_TYPE STREQUAL "Release")
-        set_target_properties(lovejs PROPERTIES WIN32_EXECUTABLE TRUE)
+# 性能优化和二进制压缩
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    if(MSVC)
+        # MSVC 优化
+        target_compile_options(lovejs PRIVATE /O2 /Ob2 /DNDEBUG)
+        target_link_options(lovejs PRIVATE /OPT:REF /OPT:ICF)
+    else()
+        # GCC/Clang 优化
+        target_compile_options(lovejs PRIVATE -O3 -DNDEBUG -ffunction-sections -fdata-sections)
+        if(APPLE)
+            target_link_options(lovejs PRIVATE -Wl,-dead_strip)
+        else()
+            target_link_options(lovejs PRIVATE -Wl,--gc-sections -s)
+        endif()
     endif()
 endif()
 
-# macOS 特定设置
+# 平台特定设置
+if(WIN32)
+    target_compile_definitions(lovejs PRIVATE _CRT_SECURE_NO_WARNINGS)
+endif()
+
 if(APPLE)
     target_link_libraries(lovejs PRIVATE
         "-framework Cocoa"
@@ -64,3 +87,4 @@ if(APPLE)
         "-framework QuartzCore"
     )
 endif()
+
