--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = third_party/SDL
 	url = https://github.com/libsdl-org/SDL.git
 	branch = main
+[submodule "third_party/sokol"]
+	path = third_party/sokol
+	url = https://github.com/floooh/sokol.git
